--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
     "react": "^15.3.1",
     "react-dom": "~15.2.0",
     "react-native": "^0.34.1",
+    "react-native-busy-indicator": "^1.0.8",
     "react-native-lock": "futurice/react-native-lock#feature/customizedTheme",
+    "react-native-material-design": "^0.3.7",
+    "react-native-message-bar": "^1.6.0",
+    "react-native-picker": "^3.0.5",
+    "react-native-radio-button": "^1.0.2",
+    "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.4.0",
     "redux-logger": "^2.6.1",
