--- a/ios/SpacFusion.xcodeproj/xcshareddata/xcschemes/SpacFusion.xcscheme
+++ b/ios/SpacFusion.xcodeproj/xcshareddata/xcschemes/SpacFusion.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Spac Fusion.app"
+               BuildableName = "SPAC Fusion.app"
                BlueprintName = "SpacFusion"
                ReferencedContainer = "container:SpacFusion.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Spac Fusion.app"
+            BuildableName = "SPAC Fusion.app"
             BlueprintName = "SpacFusion"
             ReferencedContainer = "container:SpacFusion.xcodeproj">
          </BuildableReference>
@@ -80,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Spac Fusion.app"
+            BuildableName = "SPAC Fusion.app"
             BlueprintName = "SpacFusion"
             ReferencedContainer = "container:SpacFusion.xcodeproj">
          </BuildableReference>
@@ -99,7 +99,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Spac Fusion.app"
+            BuildableName = "SPAC Fusion.app"
             BlueprintName = "SpacFusion"
             ReferencedContainer = "container:SpacFusion.xcodeproj">
          </BuildableReference>
