--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "SpacFusion",
-  "author": "Futurice",
+  "name": "SPAC Fusion",
+  "author": "Andrew Zurn",
   "description": "React Native App Starter Kit for Android and iOS",
   "license": "MIT",
-  "homepage": "http://getpepperoni.com",
-  "bugs": "https://github.com/futurice/pepperoni-app-kit/issues",
+  "homepage": "http://thespac.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/futurice/pepperoni-app-kit"
+    "url": "https://github.com/AndrewZurn/spac-fusion-mobile-app"
   },
   "keywords": [
     "React Native",
